--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,12 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-slider-swiper": "^2.0.6",
+    "react-slideshow-image": "^4.2.1",
+    "react-uuid": "^2.0.0",
+    "slider": "^1.0.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
